--- a/src/app/shared/layout/modals/login-modal/login-modal.component.html
+++ b/src/app/shared/layout/modals/login-modal/login-modal.component.html
@@ -27,17 +27,20 @@
             </div>
 
                 <div class="form-group mb-4">
-                     <div class="input-md" >
-                        <div class="input-prefix" *ngIf="form.get('loginMode').value === 'phone'">+55 | </div>
-                     <input type="text" id="username" class="form-control inverted-out"
-                           formControlName="username"
-                               [ngClass]="applyCssInputError('username')"
-                           [attr.maxlength]="loginMode === 'phone' ? '15' : null"
-                           [mask]="loginMode === 'phone' ? '(00) 00000-0000' : null"
-                           [dropSpecialCharacters]="false"
-                           [style.paddingLeft]="loginMode === 'phone' ? '44px' : null"
-
-                    />
+                    <div class="input-md" >
+                        <div class="input-prefix" *ngIf="form.get('loginMode').value === 'phone' && (inputFocused || inputLoginValue) ">+55 | </div>
+                        <input type="text" id="username" class="form-control inverted-out"
+                            formControlName="username"
+                            [ngClass]="applyCssInputError('username')"
+                            [attr.maxlength]="loginMode === 'phone' ? '15' : null"
+                            [mask]="loginMode === 'phone' ? '(00) 00000-0000' : null"
+                            [dropSpecialCharacters]="false"
+                            [style.paddingLeft]="loginMode === 'phone' ? '44px' : null"
+                            placeholder=" "
+                            (focus)="onFocus()" 
+                            (blur)="onBlur()" 
+                            (input)="onInput($event)"
+                        />
                         <label for="username">{{ loginMode === 'phone' ? ('geral.loginPhone' | translate) : ('geral.loginEmail' | translate) }}</label>
                     </div>
                     <app-error-msg [control]="form.get('username')" label="{{ loginMode === 'phone' ? ('geral.loginPhone' | translate) : ('geral.loginEmail' | translate) }}" class="text-left"></app-error-msg>
