--- a/src/app/shared/layout/footer/footer.component.html
+++ b/src/app/shared/layout/footer/footer.component.html
@@ -34,8 +34,8 @@
                 <a [routerLink]="hasJogoResponsavel ? ['/informacoes/jogo-responsavel'] : null">
                     <svg-icon [src]="'https://weebet.s3.amazonaws.com/cdn/img/mais_18.svg'" [svgStyle]="svgStyleMaiorIdade()"></svg-icon>
                 </a>
-                <a href="">
-                    <img *ngIf="slug == 'puskasbet.com.br'" src="https://cdn.wee.bet/img/sigap.png" width="130" border="0" alt="SIGAP">
+                <a href="https://sigap.fazenda.gov.br/consulta-publica/lista-solicitacoes" *ngIf="slug == 'puskasbet.com.br'">
+                    <img src="https://cdn.wee.bet/img/sigap.png" width="130" border="0" alt="SIGAP">
                 </a>
                 <div class="info pagamento" *ngIf="hasApiPagamentos">
                     <h4 class="title">{{'footer.metodosDePagamento' | translate}}</h4>
