fix: Changing the name from Configurações to Jogo responsavel

--- a/src/app/clientes/configuracoes/configuracoes.component.html
+++ b/src/app/clientes/configuracoes/configuracoes.component.html
@@ -5,13 +5,13 @@
             <a (click)="toClose()" class="botao-esquerdo">
                 <i class="fa fa-arrow-left"></i>
             </a>
-            <div class="titulo">{{'geral.configuracoes' | translate}}</div>
+            <div class="titulo">{{'geral.jogoResponsavel' | translate}}</div>
             <div class="botao-direito"></div>
         </div>
 
         <div class="internal-container-out">
             <div class="content-header hide-mobile">
-                <h2>{{'geral.configuracoes' | translate}}</h2>
+                <h2>{{'geral.jogoResponsavel' | translate}}</h2>
             </div>
 
             <div class="content-body">
