fix: placing the region and transforming the names to uppercase

--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
@@ -40,7 +40,7 @@
                     <div class="jogo-destaque">
                         <div class="header">
                             <span class="campeonato-nome" [title]="jogoDestaque.campeonato?.nome">
-                                {{ jogoDestaque.campeonato?.nome }}
+                                {{ jogoDestaque.campeonato?.regiao | uppercase }}: {{ jogoDestaque.campeonato?.nome | uppercase }}
                             </span>
                             <span>
                                 {{ jogoDestaque.horario | moment: '' : true}}{{ jogoDestaque.horario | moment:"/ H:mm"}}
