fix: remove unnecessary href on 'btn-sair'.

--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -707,7 +707,7 @@
                                     {{ 'geral.configuracoes' | translate }}
                                 </a>
                             </div>
-                            <a (click)="logout()" href="#" class="dropdown-btn btn-sair">
+                            <a (click)="logout()" class="dropdown-btn btn-sair">
                                 <i class="fa fa-sign-out mr-2"></i>
                                 <span class="dados">{{ 'geral.sair' | translate }}</span>
                             </a>
