--- a/src/app/esportes/live/jogo/live-jogo.component.html
+++ b/src/app/esportes/live/jogo/live-jogo.component.html
@@ -125,10 +125,10 @@
                     <div class="time-a">
                         <div class="time-a-nome">
                             <span *ngIf="jogo?.time_a_img; else defaulImageA">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.time_a_img}}.png" size="m">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/{{jogo.time_a_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageA class="escudo">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="m" class="escudo-img">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/default.png" size="m" class="escudo-img">
                             </ng-template>
                             <br>
                             <div class="time-nome">
@@ -164,10 +164,10 @@
                     <div class="time-b">
                         <div class="time-b-nome">
                             <span *ngIf="jogo?.time_b_img; else defaulImageB">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.time_b_img}}.png" size="m">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/{{jogo.time_b_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageB class="escudo">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="m" class="escudo-img">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/default.png" size="m" class="escudo-img">
                             </ng-template>
                             <br>
                             <div class="time-nome">
@@ -211,10 +211,10 @@
                     <div class="time-a">
                         <div class="time-a-nome">
                             <span *ngIf="jogo?.time_a_img; else defaulImageA">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.time_a_img}}.png" size="m">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/{{jogo.time_a_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageA class="escudo">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="m" class="escudo-img">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/default.png" size="m" class="escudo-img">
                             </ng-template>
                             <br>
                             <div class="time-nome">
@@ -250,10 +250,10 @@
                     <div class="time-b">
                         <div class="time-b-nome">
                             <span *ngIf="jogo?.time_b_img; else defaulImageB">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/{{jogo.time_b_img}}.png" size="m">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/{{jogo.time_b_img}}.png" size="m">
                             </span>
                             <ng-template #defaulImageB class="escudo">
-                                <img src="https://cdn.wee.bet/img/times_v2/m/default.png" size="m" class="escudo-img">
+                                <img src="https://cdn.wee.bet/img/{{teamShield(jogo?.sport_id)}}/m/default.png" size="m" class="escudo-img">
                             </ng-template>
                             <br>
                             <div class="time-nome">
