--- a/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
+++ b/src/app/shared/sidebar/sidebar-nav/sidebar-nav.component.html
@@ -45,7 +45,7 @@
                 <a (click)="goTo(getRotaPorEsporteId(ligaPopular.sport_id), { campeonato: ligaPopular.api_id })">
                     <i [ngClass]="getIconClassLigasPopulares(ligaPopular.sport_id)"></i>
                     <span class="regiao-nome">
-                        <span *ngIf="ligaPopular.sport_id === sportsIds.FOOTBALL_ID && ligaPopular.regiao_sigla"
+                        <span *ngIf="ligaPopular.sport_id === footballId && ligaPopular.regiao_sigla"
                               class="flag-icon flag-icon-{{ligaPopular.regiao_sigla}}">
                         </span>
                         {{ligaPopular.nome}}
